welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: overloaded method value avance with alternatives:
  (x$1: Int)Unit <and>
  ()Unit
 cannot be applied to (nbPas: Int)
		avance(nbPas=6);
                ^